--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giovanni Duminuco PhD</title>
+    <title>Giovanni Duminuco PhD Candidate</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
         }
 
         body.dark-mode {
-            --colors--background: #2E3047; /* Il tuo nuovo sfondo scuro */
+            --colors--background: #2E3047; 
             --colors--text: #f0f0f0;
             --colors--text-secondary: #b0b3c5;
             --colors--border: rgba(255, 255, 255, 0.15);
@@ -143,7 +143,7 @@
 
 <div class="container">
     <header class="header">
-        <h1 class="header-name"><a href="/">Giovanni Duminuco PhD</a></h1>
+        <h1 class="header-name"><a href="/">Giovanni Duminuco</a></h1>
         <label class="theme-switch">
             <input type="checkbox" id="checkbox" />
             <div class="slider"></div>
@@ -152,7 +152,7 @@
 
     <main>
         <div class="bio-intro">
-            <p><strong>Dottore di ricerca in Scienze dell'educazione</strong> e docente universitario. Laureato in Filosofia, con oltre quindici anni di esperienza nella <strong>progettazione sociale</strong> e nei contesti educativi complessi.</p>
+            <p><strong>PhD Candidate in Scienze dell'educazione</strong> e docente universitario. Laureato in Filosofia, con oltre quindici anni di esperienza nella <strong>progettazione sociale</strong> e nei contesti educativi complessi.</p>
             <p>Il mio lavoro interroga le <strong>categorie e i linguaggi</strong> attraverso cui costruiamo le pratiche educative.</p>
             <p>Questo spazio è un <strong>osservatorio critico</strong> sul presente e un laboratorio di ricerca aperto. Qui pubblico saggi, analisi e riflessioni sul sistema educativo, sul <strong>terzo settore</strong> e sulle pratiche sociali contemporanee.</p>
         </div>
