--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Fira+Code:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,400;0,6..72,500;0,6..72,600;1,6..72,400&display=swap" rel="stylesheet">
     
     <style>
         :root {
@@ -16,17 +16,17 @@
             --colors--text-secondary: #6b6b6b;
             --colors--border: rgba(0, 0, 0, 0.1);
             --colors--toggle: #1b1b1b; 
-            --font-main: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            --font-mono: 'Fira Code', monospace; /* Per i dettagli tech */
+            --font-family: 'Newsreader', Georgia, serif;
             --container-narrow: 620px;
-            --base-font-size: 17px; /* Inter appare più grande, 17px è perfetto */
+            --base-font-size: 19px;    
         }
 
+        /* MODIFICA COLORI DARK MODE */
         body.dark-mode {
-            --colors--background: #112044;
-            --colors--text: #C8D3ED;
-            --colors--text-secondary: #90a0c7;
-            --colors--border: rgba(200, 211, 237, 0.15);
+            --colors--background: #112044;  /* Il tuo nuovo blu notte */
+            --colors--text: #C8D3ED;        /* Il tuo nuovo azzurro chiaro */
+            --colors--text-secondary: #90a0c7; /* Una tonalità intermedia per i testi secondari */
+            --colors--border: rgba(200, 211, 237, 0.2);
             --colors--toggle: #C8D3ED; 
         }
 
@@ -40,13 +40,12 @@
         }
 
         body {
-            font-family: var(--font-main);
+            font-family: var(--font-family);
             color: var(--colors--text);
             background-color: var(--colors--background);
-            line-height: 1.6; 
+            line-height: 1.60; 
             transition: background-color 0.4s ease, color 0.4s ease;
             -webkit-font-smoothing: antialiased;
-            letter-spacing: -0.01em; /* Inter rende meglio con un tracking leggermente stretto */
         }
 
         .container {
@@ -56,22 +55,21 @@
         }
 
         .header {
-            padding: 4rem 0 3rem;
+            padding: 3.5rem 0 2.5rem;
             display: flex;
             justify-content: space-between;
             align-items: baseline;
         }
 
         .header-name {
-            font-size: 1.1rem;
-            font-weight: 600;
-            letter-spacing: -0.02em;
-            text-transform: lowercase; /* Tocco di stile moderno simile a molti siti tech */
+            font-size: 1.30rem;
+            font-weight: 500;
+            letter-spacing: -0.01em;
         }
 
         .header-name a { color: var(--colors--text); text-decoration: none; }
 
-        /* Switch del tema */
+        /* Stile dello Switch */
         .theme-switch {
             display: inline-block;
             height: 20px;
@@ -82,13 +80,17 @@
         .theme-switch input { display: none; }
 
         .slider {
-            background-color: rgba(0,0,0,0.08);
+            background-color: rgba(0,0,0,0.05);
             position: absolute;
             cursor: pointer;
             top: 0; left: 0; right: 0; bottom: 0;
             transition: .4s;
             border-radius: 34px;
             border: 1px solid var(--colors--border);
+        }
+
+        body.dark-mode .slider {
+            background-color: rgba(255,255,255,0.05);
         }
 
         .slider:before {
@@ -101,57 +103,41 @@
             border-radius: 50%;
         }
 
+        input:checked + .slider { background-color: transparent; }
         input:checked + .slider:before { 
             transform: translateX(20px);
             background-color: var(--colors--toggle);
         }
 
-        /* Testo Bio */
-        .bio-intro p { 
-            margin-bottom: 1.2em; 
-            font-weight: 400;
-        }
-
-        .bio-intro strong {
-            font-weight: 600;
-            color: var(--colors--text);
-        }
+        .bio-intro p { margin-bottom: 1.1em; }
 
         a {
             color: var(--colors--text);
             text-decoration: underline;
-            text-underline-offset: 4px;
+            text-underline-offset: 3px;
             text-decoration-thickness: 1px;
-            transition: all 0.2s ease;
         }
 
-        a:hover { 
-            color: var(--colors--text-secondary);
-            text-decoration-color: var(--colors--text-secondary);
-        }
+        a:hover { color: var(--colors--text-secondary); }
 
-        /* Footer in stile Monospace */
         footer {
-            margin-top: 6rem;
-            padding: 2rem 0 4rem;
+            margin-top: 5rem;
+            padding: 2.5rem 0;
             border-top: 1px solid var(--colors--border);
-            font-family: var(--font-mono); /* Font tecnico */
-            font-size: 0.75rem;
+            font-size: 0.85rem;
             color: var(--colors--text-secondary);
             display: flex;
             justify-content: space-between;
             align-items: baseline;
             flex-wrap: wrap;
             gap: 1rem;
-            text-transform: uppercase;
-            letter-spacing: 0.05em;
         }
 
         .footer-links { display: flex; gap: 1.5rem; }
 
         @media (max-width: 767px) {
-            html { font-size: 16px; }
-            footer { flex-direction: column; gap: 1rem; }
+            html { font-size: 17.5px; }
+            footer { flex-direction: column; gap: 0.5rem; }
         }
     </style>
 </head>
@@ -159,7 +145,7 @@
 
 <div class="container">
     <header class="header">
-        <h1 class="header-name"><a href="/">giovanni duminuco</a></h1>
+        <h1 class="header-name"><a href="/">Giovanni Duminuco</a></h1>
         <label class="theme-switch">
             <input type="checkbox" id="checkbox" />
             <div class="slider"></div>
@@ -175,7 +161,7 @@
     </main>
 
     <footer>
-        <div>© 2026 G. Duminuco</div>
+        <div>© 2026 Giovanni Duminuco</div>
         <div class="footer-links">
             <a href="mailto:giovanni.duminuco@gmail.com">Email</a>
             <a href="https://www.linkedin.com/in/dumgio/" target="_blank">LinkedIn</a>
