--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             --colors--text-secondary: #6b6b6b;
             --colors--border: rgba(0, 0, 0, 0.1);
             --colors--toggle: #1b1b1b; 
-            --font-family: 'Newsreader', Georgia, serif;
+            --font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
             --container-narrow: 620px;
             --base-font-size: 19px;    
         }
