--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 <footer>
     © 2026 — Giovanni Duminuco. <br>
-    Sito statico ad alta leggibilità.
+    Questo sito non usa cookie, non traccia i dati e non carica risorse esterne.
 </footer>
 
 </body>
