--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 
 <main>
     <section id="bio">
-        <p><strong>PhD Candidate in Scienze dell'educazione</strong> e docente universitario. Laureato in Filosofia, con oltre 15 anni di esperienza nella progettazione sociale e nei contesti educativi complessi.</p>
-        <p>Il mio lavoro interroga le categorie e i linguaggi attraverso cui costruiamo le pratiche educative.</p>
+        <p><strong>PhD Candidate in Scienze dell'educazione</strong> e docente universitario. Laureato in Filosofia, con oltre 20 anni di esperienza nella progettazione sociale in contesti educativi complessi.</p>
+        <p>Attraverso la lente della ricerca letteraria e filosofica, il mio lavoro interroga a fondo le categorie, le narrazioni e i linguaggi con cui costruiamo e diamo senso alle pratiche educative.</p>
     </section>
 
     <section id="ricerca">
