--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <main>
     <section id="bio">
         <p><strong>PhD Candidate in Scienze dell'educazione</strong> e docente universitario. Laureato in Filosofia, con oltre 20 anni di esperienza nella progettazione sociale in contesti educativi complessi.</p>
-        <p>Attraverso la lente della ricerca letteraria e filosofica, il mio lavoro interroga a fondo le categorie, le narrazioni e i linguaggi con cui costruiamo e diamo senso alle pratiche educative.</p>
+        <p>Muovendo dalla ricerca letteraria e filosofica, il mio lavoro interroga a fondo le categorie, le narrazioni e i linguaggi con cui costruiamo e diamo senso alle pratiche educative.</p>
     </section>
 
     <section id="ricerca">
