--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
         <h2>Interessi di ricerca</h2>
         <ul>
             <li>Filosofia dell'educazione</li>
+            <li>Ricerca letteraria</li>
             <li>Pedagogia generale e sociale</li>
             <li>Epistemologia della complessità</li>
-            <li>Analisi del Terzo Settore e politiche sociali</li>
         </ul>
     </section>
 
