--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giovanni Duminuco | PhD</title>
+    
+    <title>Giovanni Duminuco | PhD in Scienze dell'educazione</title>
+    <meta name="description" content="Sito ufficiale di Giovanni Duminuco, PhD e docente universitario. Ricerca in filosofia dell'educazione, pedagogia sociale e linguaggi della progettazione.">
+    <meta name="author" content="Giovanni Duminuco">
+    <link rel="canonical" href="https://www.giovanniduminuco.it/">
+
     <style>
         /* CONFIGURAZIONE BASE - FISSA SU TEMA CHIARO */
         body {
