--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Giovanni Duminuco | PhD in Scienze dell'educazione</title>
-    <meta name="description" content="Sito ufficiale di Giovanni Duminuco, PhD e docente universitario. Ricerca in filosofia dell'educazione, pedagogia sociale e linguaggi della progettazione.">
+    <title>Giovanni Duminuco | Filosofia, Pedagogia e Progettazione Sociale</title>
+    <meta name="description" content="Sito ufficiale di Giovanni Duminuco, docente e ricercatore. Ricerca letteraria e filosofica su linguaggi, narrazioni e progettazione sociale.">
     <meta name="author" content="Giovanni Duminuco">
     <link rel="canonical" href="https://www.giovanniduminuco.it/">
 
